[package]
name = "magmakit"
version = "0.1.0"
authors = ["wareya <wareya@gmail.com>"]
edition = "2018"

[dependencies]
image = "*"
glium = "0.25.1"
glyph_brush = "*"
gammakit = { path = "../gammakit" }
winapi = "*"

[profile.bench]
codegen-units = 1
opt-level = 's'
debug = true
incremental = true
overflow-checks = false
lto = false

[profile.release]
codegen-units = 1
opt-level = 's'
debug = true
incremental = true
overflow-checks = false
lto = false

[profile.test]
opt-level = 3
overflow-checks = true
